--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.3",
-    "handlebars": "^4.7.8"
+    "@hapi/vision": "^7.0.3",
+    "handlebars": "^4.7.8",
+    "uuid": "^9.0.1"
   }
 }
