--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.3",
     "@hapi/vision": "^7.0.3",
+    "bulma": "^0.9.4",
     "handlebars": "^4.7.8",
     "uuid": "^9.0.1"
   }
