--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.3",
     "@hapi/vision": "^7.0.3",
     "bulma": "^0.9.4",
