--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "test": "mocha --ui tdd test/**.js -exit"
   },
   "repository": {
     "type": "git",
@@ -29,10 +30,12 @@
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.3",
     "@hapi/vision": "^7.0.3",
+    "chai": "^5.1.0",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "joi": "^17.12.2",
     "lowdb": "^7.0.1",
+    "mocha": "^10.3.0",
     "uuid": "^9.0.1"
   }
 }
