--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@hapi/boom": "^10.0.1",
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.3",
+    "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
     "chai": "^5.1.0",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
+    "hapi-swagger": "^17.2.1",
     "joi": "^17.12.2",
     "lowdb": "^7.0.1",
     "mocha": "^10.3.0",
