--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 cookie_name=brughafitzpatrick
 cookie_password=b20104109fitzpatrickHDipComputerScience
 # db=mongodb://localhost/placemark
-# db=mongodb://127.0.0.1:27017/placemark?directConnection=true
+db=mongodb://10.0.0.139:27017/placemark?directConnection=true
 cloudinary_name=dbom8nvgr
 cloudinary_key=857851776268797
 cloudinary_secret=OZcVX0r35BYyvrzOixs1pr9sefw
-db=mongodb+srv://fitzBru:P1ElhD5GcC7t1Lvc@placemark.mtplzme.mongodb.net/?retryWrites=true&w=majority&appName=placemark
+# db=mongodb+srv://fitzBru:P1ElhD5GcC7t1Lvc@placemark.mtplzme.mongodb.net/?retryWrites=true&w=majority&appName=placemark
 admin_login=fitzBru
 admin_password=supersecretpassword1234
 website_login=20104109@mail.wit.ie
